--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: tarefull
-description: A new Flutter project.
+name: Tarefull
+description: Aplicativo de organização de tarefas
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
